Thu Dec 11 21:07:56 2008  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rss/maker.rb, lib/rss/maker/0.9.rb, lib/rss/maker/base.rb:
	RSS::Maker.[] returns a maker class corresponds to passed version.

	* test/rss/test_maker_*.rb: add tests for RSS::Maker.[].

Thu Dec 11 20:38:26 2008  Akinori MUSHA  <knu@iDaemons.org>

	* test/ruby/test_enumerator.rb: Add tests for the recently added
	  features.

Thu Dec 11 20:36:26 2008  Akinori MUSHA  <knu@iDaemons.org>

	* lib/generator.rb (Enumerator#__generator): Now that
	  Enumerator::Generator is defined, the Generator here must be
	  referred to as ::Generator.

Thu Dec 11 19:33:10 2008  Akinori MUSHA  <knu@iDaemons.org>

	* enumerator.c (enumerator_initialize): Add an ability to generate
	  an enumerator from a block. [ruby-dev:35903]

Thu Dec 11 19:08:38 2008  Akinori MUSHA  <knu@iDaemons.org>

	* enumerator.c (enum_each_with_object): Add
	  Enumerable#each_with_object and Enumerator#with_object.

Wed Dec 10 21:35:12 2008  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rss/maker.rb (RSS::Maker.[]): add.
	Suggested by Akinori MUSHA. Thanks!!! [ruby-dev:37210]

	* NEWS: add an entry for the above change.

Wed Dec 10 12:51:14 2008  Akinori MUSHA  <knu@iDaemons.org>

	* enumerator.c (enumerator_next): Fix a typo: s/rewinded/rewound/.

	* lib/generator.rb (Enumerator#next): Ditto.

Tue Dec  9 03:21:37 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* mkconfig.rb: fix for continued lines.  based on a patch from
	  Marcus Rueckert <darix AT opensu.se> at [ruby-core:20420].

Mon Dec  8 23:34:18 2008  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* pack.c (pack_pack): fixed odd act of 'm*', 'M*', and 'P*'.
	  just ignores '*' in these cases.
	  [ruby-dev:37289]

Mon Dec  8 18:31:41 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* pack.c (pack_pack): fixed length for odd length string.
	  [ruby-dev:37283]

Mon Dec  8 13:51:41 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (rb_yield_0): Qundef means no argument.  [ruby-Bugs-22525]
