@@ -36,6 +36,10 @@ with all sufficient information, see the ChangeLog file.
     Now can generate an enumerator from a block that defines
     enumeration instead of an enumerable object.
 
+  * Enumerator#rewind
+
+    Now calls the "rewind" method of the enclosed object if defined.
+
   * Hash#default_proc=
 
     New method.
@@ -116,6 +120,12 @@ with all sufficient information, see the ChangeLog file.
     * do not raise an exception even if log writing failed.
     * do not raise ShiftingError if an aged file already exists.
       (no ShiftingError will be raised from 1.2.7, just warn() instead)
+
+=== Compatibility issues (excluding feature bug fixes)
+
+  * Enumerator#rewind
+
+    See above.
 
 == Changes since the 1.8.6 release
 
